<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5E3903"
    tools:context=".BoloDeChocolate">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="401dp"
        android:layout_height="576dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.569">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_1_quatro_ovos"
            android:textColor="#100B0B"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2_quatro_colheres_de_chocolate_em_p"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_3_duas_colheres_de_manteiga"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_4_tr_s_x_caras_de_farinha_de_trigo"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_5_tr_s_x_cara_de_a_car"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_6_duas_colheres_de_fermento"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_7_uma_x_cara_de_leite"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:text="@string/_8_mexa_bem_e_bote_em_uma_vasilha_com_manteiga_e_fermento_depois_coloque_ao_forno_em_uma_temperatura_de_180_graus_por_40_minutos"
            android:textColor="#000000"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="411dp"
        android:layout_height="66dp"
        android:background="#FFC107"
        android:text="@string/bolo_de_chocolate"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <Button
        android:id="@+id/go_voltar2_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voltar"
        app:backgroundTint="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>