<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="408dp"
        android:layout_height="512dp"
        android:background="#FF9800"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_1_uma_x_cara_de_leite"
            android:textColor="#040303"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:text="@string/_2_meia_colher_de_leo"
            android:textColor="#070706"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/_3_meia_x_cara_rasa_de_sal"
            android:textColor="#070606"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_4_500g_de_polvilho_doce"
            android:textColor="#131110"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_5_dois_ovos"
            android:textColor="#070101"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_6_uma_x_cara_e_meia_de_queijo_ralado"
            android:textColor="#100D0D"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="226dp"
            android:text="@string/_7_mexa_bem_os_ingredientes_e_fa_a_pequenas_bolas_e_coloque_no_forno_em_200_graus_por_20_min"
            android:textColor="#000000"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FF5722"
        android:text="@string/p_o_de_queijo"
        android:textColor="#FFFBFB"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/go_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voltar"
        app:backgroundTint="#FF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.466" />
</androidx.constraintlayout.widget.ConstraintLayout>