<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".BoloDeBanana">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="409dp"
        android:layout_height="53dp"
        android:background="#FFEB3B"
        android:text="@string/bolo_de_banana"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voltar"
        app:backgroundTint="#FFEB3B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        app:layout_constraintVertical_bias="0.92" />

    <LinearLayout
        android:layout_width="407dp"
        android:layout_height="509dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_1_tr_s_ovos"
            android:textColor="#0C0A0A"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2_duas_x_caras_de_a_car"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_3_uma_x_cara_de_leite"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_4_meia_x_cara_de_leo"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_5_duas_x_carasde_farinha_de_trigo"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_6_uma_colher_de_fermento"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_7_sete_bananas"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:text="@string/_8_mexa_bem_e_bote_em_uma_vasilha_com_manteiga_e_fermento_depois_coloque_ao_forno_em_uma_temperatura_de_180_graus_por_30_minutos"
            android:textColor="#070505"
            android:textSize="30sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>